--- a/package.json
+++ b/package.json
@@ -1,8 +1,28 @@
-npm instanpm run {
+{
   "name": "portfolio",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "dependencies": {
+    "binary-extensions": "^2.3.0",
+    "anymatch": "^3.1.3",
+    "braces": "^3.0.2",
+    "fill-range": "^7.0.1",
+    "chokidar": "^3.6.0",
+    "glob-parent": "^5.1.2",
+    "immutable": "^4.3.5",
+    "is-binary-path": "^2.1.0",
+    "is-glob": "^4.0.3",
+    "is-extglob": "^2.1.1",
+    "is-number": "^7.0.0",
+    "picomatch": "^2.3.1",
+    "readdirp": "^3.6.0",
+    "normalize-path": "^3.0.0",
+    "sass": "^1.75.0",
+    "source-map-js": "^1.2.0",
+    "to-regex-range": "^5.0.1"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "sass ./styles/main.scss ./styles/main-style.css",
@@ -18,9 +38,5 @@ npm instanpm run {
   "bugs": {
     "url": "https://github.com/basti-1982/portfolio/issues"
   },
-  "homepage": "https://github.com/basti-1982/portfolio#readme",
-  "dependencies": {
-    "sass": "^1.75.0"
-  },
-  "devDependencies": {}
+  "homepage": "https://github.com/basti-1982/portfolio#readme"
 }
